force-app/main/default/objects/TriggerSettings__c/TriggerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Trigger Settings</label>
</CustomObject>