force-app/main/default/objects/TriggerSettings__c/fields/Disable_Acc_AccToSAP__c.field-meta.xml
<CustomField>
    <fullName>Disable_Acc_AccToSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Account and Contact Sync To SAP in Account Trigger</description>
    <inlineHelpText>Disable Account and Contact Sync To SAP in Account Trigger</inlineHelpText>
    <label>Disable Acc_AccToSAP</label>
    <type>Checkbox</type>
</CustomField>