force-app/main/default/objects/TriggerSettings__c/fields/Disable_All__c.field-meta.xml
<CustomField>
    <fullName>Disable_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable All</label>
    <type>Checkbox</type>
</CustomField>