force-app/main/default/objects/TriggerSettings__c/fields/Disable_Con_AccToSAP__c.field-meta.xml
<CustomField>
    <fullName>Disable_Con_AccToSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Account and Contact Sync To SAP in Contact Trigger</description>
    <inlineHelpText>Disable Account and Contact Sync To SAP in Contact Trigger</inlineHelpText>
    <label>Disable Con_AccToSAP</label>
    <type>Checkbox</type>
</CustomField>