force-app/main/default/objects/TriggerSettings__c/fields/Disable_Opp_AccToSAP__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opp_AccToSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Account and Contact Sync To SAP in Opportunity Trigger</description>
    <inlineHelpText>Disable Account and Contact Sync To SAP in Opportunity Trigger</inlineHelpText>
    <label>Disable Opp_AccToSAP</label>
    <type>Checkbox</type>
</CustomField>