force-app/main/default/objects/TriggerSettings__c/fields/Disable_OrderToSAP__c.field-meta.xml
<CustomField>
    <fullName>Disable_OrderToSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable OrderToSAP</label>
    <type>Checkbox</type>
</CustomField>