force-app/main/default/objects/TriggerSettings__c/fields/DisableQuote__c.field-meta.xml
<CustomField>
    <fullName>DisableQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Quote</label>
    <type>Checkbox</type>
</CustomField>