force-app/main/default/objects/TriggerSettings__c/fields/DisableQuoteLineSubItem__c.field-meta.xml
<CustomField>
    <fullName>DisableQuoteLineSubItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Quote Line Sub Item</label>
    <type>Checkbox</type>
</CustomField>