force-app/main/default/objects/TriggerSettings__c/fields/DisableRequestForTechnician__c.field-meta.xml
<CustomField>
    <fullName>DisableRequestForTechnician__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Request For Technician</label>
    <type>Checkbox</type>
</CustomField>