force-app/main/default/objects/TriggerSettings__c/fields/UseOldOppNumbers__c.field-meta.xml
<CustomField>
    <fullName>UseOldOppNumbers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temp settings - set true until Opp Numbers switch - delete after that</description>
    <inlineHelpText>Temp settings - set true until Opp Numbers switch - delete after that</inlineHelpText>
    <label>UseOldOppNumbers</label>
    <type>Checkbox</type>
</CustomField>